--- a/src/Final.css
+++ b/src/Final.css
@@ -1,10 +1,12 @@
 .final{
-    background: pink;
+    background:rgb(255, 115, 197);
     text-align: center;
     justify-content:center;
     padding:21px ;
     font-size: 23px;
-    font-family:'Archivo Narrow', sans-serif; ;  
+    font-family: 'Lobster', cursive;
+    margin-top: 125px;
+
   
 };
  
@@ -19,7 +21,7 @@
     padding: 10px 30px;
     border-radius: 7px;
     border: none;
-    background: palevioletred;
+    background: rgb(253, 175, 213);
     color: black;
 
 }
