--- a/src/Apresentacao.css
+++ b/src/Apresentacao.css
@@ -1,23 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Tapestry&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital@1&family=Lobster&family=Tapestry&display=swap');
+
 .telaP{
-    background:pink;
+    background:rgb(255, 115, 197);
     justify-content:space-between;
     text-align: center;
     padding:23px;
     font-size: 23px;
-    
-    width: 100%;  
+    font-family: 'Lobster', cursive;
+    width: 97% 25% 97% 25%; 
+    border-radius: 15px; 
+    height: 25% ;
+    margin-top: 55px;
 };
 
-.Apresentacao h1{
+.h1{
     font-family: 'Tapestry', cursive;
     color: palevioletred;
 };
 
-.button{
-    padding: 10px 30px;
-    border-radius: 7px;
+.botao{
+    
+    padding: 15px 35px;
+    border-radius: 15px;
     border: none;
     background: palevioletred;
     color: black
